...
  isMapCenteredOnUser: boolean;
  isFollowModeActive: boolean;
  insets: SafeAreaInsets;
}) => (
  <View
    style={styles.container}
    testID="map-screen"
    onLayout={(event) => {
      const { width, height } = event.nativeEvent.layout;
      setMapDimensions({ width, height });
    }}
  >
    <View style={styles.loadingContainer}>
...
